end game fixed